<resources>
    <string name="library_name">Waveform</string>
    <string name="app_name">MocTV Karaoke</string>
    <string name="facebook_app_id">126945264629111</string>
    <string name="places_sample_activity_title">Places Sample</string>
    <string name="youtube_sample_activity_title">Youtube Sample</string>
    <string name="video_sample_activity_title">Video Sample</string>
    <string name="places_sample_button">Places Sample</string>
    <string name="youtube_sample_button">Youtube Sample</string>
    <string name="video_sample_button">Video Sample</string>
    <string name="tv_shows_sample_activity_title">TV Shows Sample</string>
    <string name="tv_shows_sample_button">TV Shows Sample</string>
    <string name="main_activity_places_button_title">Places</string>
    <string name="main_activity_tv_shows_button_title">Tv Shows</string>
    <string name="main_activity_youtube_button_title">Youtube</string>
    <string name="main_activity_video_view_button_title">VideoView</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="song_name">Tên bài hát</string>
    <string name="singer_name">Tên ca sĩ</string>
    <string name="huongDanSuDung">
        \n
        ** Hướng dẫn sử dụng:
        \n\n
        - Kéo thanh trượt để điều chỉnh hiệu ứng \n
            \t\t + Echo: tiếng lặp \n
            \t\t + Reverb: tiếng vang \n
            \t\t + Volume: chỉnh âm lượng của file ghi âm \n
        - Sau khi chỉnh xong bấm save để lưu \n
        - Nếu bạn muốn tạo video từ bài hát vừa thu thì bấm vào nút Tạo Video\n\n
        ** Lưu ý bạn chỉ có thể tạo video sau khi lưu bài hát lại


    </string>
    <string name="reverb">Nếu một lúc nào đó tình cờ hay cố ý, bạn nghe 1 bản nhạc và cảm nhận giống như bạn đang đứng trong một nhà hát lớn, với một dàn nhạc khổng lồ, hoành tráng, hay 1 bài nhạc ma mị sâu thẳm, hay một bản acoustic trong một không gian phòng,… Hiệu ứng mô phỏng không gian này gọi là reverb</string>
    <string name="echo">Trong xử lý tín hiệu âm thanh, tiếng vang là một sự phản ánh của âm thanh mà đến lúc nghe với một sự chậm trễ sau khi âm thanh trực tiếp. Sự chậm trễ này tỷ lệ với khoảng cách của bề mặt phản chiếu từ nguồn âm và người nghe.</string>
    <string name="echoText">Echo</string>
    <string name="reverbText">Reverb – Sự vang âm</string>
    <string name="text0">0.5</string>
    <string name="reverbTextSeek">Reverb</string>
    <string name="volumeText">Volume</string>
    <string name="textVolume">1.0</string>
    <string name="phatAudio">Phát</string>
    <string name="luuAudio">Lưu</string>
    <string name="taoVideo">Tạo Video</string>
    <string name="luuShareFacebook">
        ** Gợi ý: \n
        Bạn có thể chia sẻ lên facebook sau khi tạo video xong</string>
    <string name="moTaApp">Ứng dụng karaoke được phát hành bởi MOCKaraoke   Phiên bản: 1.0.0</string>
    <string name="slogan">Hoà nhịp đam mê</string>
    <string name="supportApp">Mọi chi tiết xin vui lòng liên hệ qua email:  nguyen1moctv@gmail.com</string>
    <string name="cameraTruoc">Camera trước</string>
    <string name="cameraSau">Camera sau</string>
    <string name="dsRong">Danh sách rỗng!</string>
    <string name="quayVideo">Quay</string>
    <string name="loadData">Đang tải dữ liệu...</string>
    <string-array name="Function">
        <item>Thêm vào danh sách yêu thích</item>
        <item>Thêm vào danh sách phát</item>
        <item>Xoá khỏi danh sách</item>
        <item></item>
    </string-array>
    <string-array name="itemMyVideo">
        <item>Chia sẻ qua facebook</item>
        <item>Đổi tên</item>
        <item>Xoá</item>
        <item></item>
    </string-array>
    <string-array name="itemMyRecord">
        <item>Tạo video</item>
        <item>Đổi tên</item>
        <item>Xoá</item>
        <item></item>
    </string-array>
</resources>